Comapany details to Recruiter account

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1851,12 +1851,20 @@ databaseChangeLog:
             - column:
                 name: company_address
                 type: varchar
+                constraints:
+                    default: ""
             - column:
                 name: company_country
                 type: varchar
+                constraints:
+                    default: ""
             - column:
                 name: company_registration_number
                 type: varchar
+                constraints:
+                    default: ""
             - column:
                 name: company_vat_number
                 type: varchar
+                constraints:
+                    default: ""
