update curriculum admin, recruiter and candidate

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2013,4 +2013,13 @@ databaseChangeLog:
             - column:
                 name: days_on_site
                 type: varchar
-            
+      id: addCurriculumExtraCols
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: curriculum
+            schemaName: curriculum
+            columns:
+            - column:
+                name: owner_id
+                type: varchar
