--- a/recruit-gui/angular.json
+++ b/recruit-gui/angular.json
@@ -80,20 +80,20 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "recruit-ui:build",
             "host": "127.0.0.1",
-            "port": 4200
+            "port": 4200,
+            "buildTarget": "recruit-ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "recruit-ui:build:production"
+              "buildTarget": "recruit-ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "recruit-ui:build"
+            "buildTarget": "recruit-ui:build"
           }
         },
         "test": {
