--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^17.0.5",
     "@angular/platform-browser-dynamic": "^17.0.5",
     "@angular/router": "^17.0.5",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "angular-font-awesome": "^3.1.2",
     "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.6.0",
@@ -33,7 +33,9 @@
     "jquery": "^3.6.0",
     "material-ui-flags": "^1.2.4",
     "ng2-charts": "^5.0.3",
+    "ngb-modal": "^2.0.3",
     "ngx-cookie": "^5.0.2",
+    "ngx-cookie-service": "^17.0.0",
     "ngx-device-detector": "^5.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -41,8 +43,8 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
-    "@angular/cli": "^16.2.10",
+    "@angular-devkit/build-angular": "^17.0.3",
+    "@angular/cli": "^17.0.3",
     "@angular/compiler-cli": "^17.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
