--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2182,3 +2182,14 @@ databaseChangeLog:
             referencedTableName: listing_alerts
             referencedTableSchemaName: listings
             referencedColumnNames: id
+  - changeSet:
+      id: addCValidatedColumn
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: skills
+            schemaName: candidate
+            columns:
+            - column:
+                name: validation_status
+                type: varchar
