--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2193,3 +2193,19 @@ databaseChangeLog:
             - column:
                 name: validation_status
                 type: varchar
+  - changeSet:
+      id: drop_offered_candidates
+      author: kparkings
+      changes:
+      -  dropTable:  
+            cascadeConstraints:  true  
+            schemaName: recruiter  
+            tableName: offered_candidate_languages
+      -  dropTable:  
+            cascadeConstraints:  true  
+            schemaName: recruiter  
+            tableName: offered_candidate_skills
+      -  dropTable:  
+            cascadeConstraints:  true  
+            schemaName: recruiter  
+            tableName: offered_candidates
