--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2263,14 +2263,14 @@ databaseChangeLog:
                   name: text_value
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
                   name: url_value
                   type: varchar
                   constraints:
-                    nullable: false
+                    nullable: true
               - column:
-                  name: image_value
+                  name: image_bytes
                   type: bytea
                   constraints:
-                    nullable: false
+                    nullable: true
