--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -22,9 +22,8 @@
     "@angular/platform-browser": "^17.0.5",
     "@angular/platform-browser-dynamic": "^17.0.5",
     "@angular/router": "^17.0.5",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "angular-font-awesome": "^3.1.2",
-    "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
@@ -34,9 +33,7 @@
     "material-ui-flags": "^1.2.4",
     "ng2-charts": "^5.0.3",
     "ngb-modal": "^2.0.3",
-    "ngx-cookie": "^5.0.2",
     "ngx-cookie-service": "^17.0.0",
-    "ngx-device-detector": "^5.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
