--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -12,17 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.1",
-    "@angular/cdk": "^17.0.1",
+    "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.2.1",
     "@angular/core": "^17.2.1",
     "@angular/forms": "^17.2.1",
-    "@angular/http": "^7.2.16",
-    "@angular/material": "^17.2.1",
+    "@angular/material": "^17.2.0",
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
+    "@ngx-translate/core": "^15.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.0",
@@ -32,7 +32,6 @@
     "jquery": "^3.6.0",
     "material-ui-flags": "^1.2.4",
     "ng2-charts": "^5.0.3",
-    "ngb-modal": "^2.0.3",
     "ngx-cookie-service": "^17.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -45,14 +44,14 @@
     "@angular/compiler-cli": "^17.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^0.0.28",
-    "jasmine-core": "~3.6.0",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "5.1.2",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
