--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.2.1",
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.0",
