working unavailable candidates

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2326,4 +2326,15 @@ databaseChangeLog:
                 name: paid_subscription
                 type: boolean
                 constraints:
-            
+  - changeSet:
+      id: addColumn-paid_subscription_recruiter
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: credits
+            schemaName: recruiter
+            columns:
+            - column:
+                name: paid_subscription
+                type: boolean
+                constraints:
