--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-     "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --sort --format namespaced-json --marker _"
+    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --sort --format namespaced-json --marker _"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "@angular/compiler": "^17.2.1",
     "@angular/core": "^17.2.1",
     "@angular/forms": "^17.2.1",
-    "@angular/material": "^17.2.0",
+    "@angular/material": "^17.3.1",
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
@@ -27,14 +27,12 @@
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "flag-icon-css": "^4.1.7",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "material-ui-flags": "^1.2.4",
+    "material-symbols": "^0.17.1",
     "ng2-charts": "^5.0.3",
     "ngx-cookie-service": "^17.0.0",
     "popper.js": "^1.16.1",
