ES connection with basic index NO SECURITY ENABLED

--- a/recruit/src/main/resources/application-local.properties
+++ b/recruit/src/main/resources/application-local.properties
@@ -13,3 +13,9 @@ jwt.cookie.secure=true
 jtw.cookie.domain=127.0.0.1
 #jwt.cookie.maxage=500000
 jwt.cookie.maxage=500000
+###
+# Elasticsearch
+###
+#spring.data.elasticsearch.cluster-name=elasticsearch
+#spring.data.elasticsearch.cluster-nodes=localhost:9200
+#spring.data.elasticsearch.repositories.enabled=true
