--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -160,7 +160,19 @@
 		    <artifactId>thumbnailator</artifactId>
 		    <version>0.4.19</version>
 		</dependency>
-				
+		<!--
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-client-sniffer</artifactId>
+    		<version>8.13.1</version>
+		</dependency>
+		-->
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+    		<artifactId>spring-data-elasticsearch</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
