--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.mail.username=kparkings@gmail.com
 spring.mail.password=zhspriurnpnzqqmo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+###
+# Elasticsearch
+###
+#spring.data.elasticsearch.cluster-name=elasticsearch
+#spring.data.elasticsearch.cluster-nodes=localhost:9200
+#spring.data.elasticsearch.repositories.enabled=true
