Spring3 upgrade and Elasticseatch intergration - working - needs testing

--- a/recruit/src/main/resources/application-local.properties
+++ b/recruit/src/main/resources/application-local.properties
@@ -19,3 +19,5 @@ jwt.cookie.maxage=500000
 #spring.data.elasticsearch.cluster-name=elasticsearch
 #spring.data.elasticsearch.cluster-nodes=localhost:9200
 #spring.data.elasticsearch.repositories.enabled=true
+
+spring.main.allow-circular-references=true
