--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.data.elasticsearch.cluster-name=elasticsearch
 #spring.data.elasticsearch.cluster-nodes=localhost:9200
 #spring.data.elasticsearch.repositories.enabled=true
+
+spring.main.allow-circular-references=true
