--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
+		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.arenella.recruit</groupId>
@@ -171,8 +171,20 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
     		<artifactId>spring-data-elasticsearch</artifactId>
-		</dependency>
+    	</dependency>
+		
+		<!--
+		<dependency>
+      <groupId>co.elastic.clients</groupId>
+      <artifactId>elasticsearch-java</artifactId>
+      <version>8.13.2</version>
+    </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+-->
 	</dependencies>
 
 	<build>
