bug fixes and ES config from properties

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.data.elasticsearch.repositories.enabled=true
 
 spring.main.allow-circular-references=true
+
+elasticsearch-url=localhost:9200
+elasticsearch-use-ssl=true
