--- a/recruit/src/main/resources/application-local.properties
+++ b/recruit/src/main/resources/application-local.properties
@@ -21,3 +21,6 @@ jwt.cookie.maxage=500000
 #spring.data.elasticsearch.repositories.enabled=true
 
 spring.main.allow-circular-references=true
+
+elasticsearch-url=localhost:9200
+elasticsearch-use-ssl=false
