--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -34,5 +34,5 @@ spring.main.allow-circular-references=true
 elasticsearch-url=localhost:9200
 elasticsearch-use-ssl=true
 elasticsearch-username=elastic
-elasticsearch-password=0pdW6*JcCB07I1*=PdBE
-elasticsearch-ca-cert-path=C:\\java\\http_ca.crt
+elasticsearch-password=djdAOZqr1gZL7rkmlWHw
+elasticsearch-ca-cert-path=/etc/elasticsearch/certs/http_ca.crt
