--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -31,3 +31,5 @@ elasticsearch-ca-cert-path=/etc/elasticsearch/certs/http_ca.crt
 
 #system
 arenella.ict.candidate.email.availability=true
+
+spring.threads.virtual.enabled=true
