city maintenance page

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2457,3 +2457,16 @@ databaseChangeLog:
                   type: timestamp
                   constraints:
                     nullable: false
+  - changeSet:
+      id: addColumn-ignore
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: city
+            schemaName: candidate
+            columns:
+            - column:
+                name: ignore
+                type: boolean
+                constraints:
+                  default: false
