--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2470,3 +2470,38 @@ databaseChangeLog:
                 type: boolean
                 constraints:
                   default: false
+  - changeSet:
+      id: candidate_saved_search
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: saved_candidate_searches
+            schemaName: candidate
+            columns:
+              - column:
+                  name: id
+                  type: UUID
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: email_alert
+                  type: boolean
+                  constraints:
+                    nullable: false
+                    default: false
+              - column:
+                  name: search_name
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: search_request
+                  type: varchar
+                  constraints:
+                    nullable: false
