--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -14,7 +14,7 @@
 	<name>recruit</name>
 	<description>Arenella Recruitment</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 	</properties>
 	<dependencies>
 		
@@ -133,6 +133,20 @@
 			<groupId>org.springframework.data</groupId>
     		<artifactId>spring-data-elasticsearch</artifactId>
     	</dependency>
+    	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<version>5.20.0</version>
+    		<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
+		<dependency>
+		    <groupId>net.bytebuddy</groupId>
+		    <artifactId>byte-buddy</artifactId>
+		    <version>1.17.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -145,6 +159,7 @@
 			<plugin>
     			<groupId>org.springframework.boot</groupId>
     			<artifactId>spring-boot-maven-plugin</artifactId>
+    			<version>4.0.0-M3</version>
     			<executions>
         			<execution>
             			<goals>
