--- a/recruit-gui/package.json
+++ b/recruit-gui/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "extract-translations": "ngx-translate-extract --input ./src --output ./src/assets/i18n/en.json --clean --sort --format namespaced-json --marker _"
+    "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
+  	"i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,da,de,fi,nb,nl,sv}.json --clean --format json"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +23,6 @@
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
-    "@bartholomej/ngx-translate-extract": "^8.0.2",
-    "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -46,6 +45,7 @@
     "@angular/compiler-cli": "^17.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@vendure/ngx-translate-extract": "^10.1.0",
     "codelyzer": "6.0.2",
     "jasmine-core": "5.1.2",
     "jasmine-spec-reporter": "~5.0.0",
