--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		 <version>3.5.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.arenella.recruit</groupId>
@@ -129,9 +129,15 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch -->
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
+		<!--
+		<dependency>
 			<groupId>org.springframework.data</groupId>
     		<artifactId>spring-data-elasticsearch</artifactId>
     	</dependency>
+    	-->
     </dependencies>
 
 	<build>
